[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unisdk"
version = "0.0.0"
description = "Python SDK for Unify's persistence and state layer"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Unify", email = "hello@unify.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.32.4",
    "aiohttp>=3.12.14",
    "tqdm>=4.67.0",
]

[project.urls]
Homepage = "https://github.com/unifyai/unisdk"
Repository = "https://github.com/unifyai/unisdk"
Issues = "https://github.com/unifyai/unisdk/issues"

[dependency-groups]
# Formatters are the single source of truth for the pinned versions CI and
# pre-commit both run. Keep them here (locked in uv.lock), not duplicated in the
# pre-commit hook.
lint = [
    "black==26.5.1",
    "isort>=5.11.4",
    "autoflake>=1.6.1",
]
dev = [
    "pytest>=8.3.3",
    "pytest-timeout>=2.3.1",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.8.0",
    "pytest-dotenv>=0.5.2",
    "python-dotenv>=1.2.1",
    "types-requests",
    "flake8>=4.0.1",
    "mypy>=1.1.1",
    "pre-commit>=3.0.1",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    {include-group = "lint"},
]

[tool.hatch.build.targets.wheel]
packages = ["unisdk"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["unisdk"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
